--- a/minimal-alpha-zero/pyproject.toml
+++ b/minimal-alpha-zero/pyproject.toml
@@ -3,5 +3,8 @@ name = "minimal-alpha-zero"
 version = "0.1.0"
 description = "Minimal AlphaZero"
 readme = "README.md"
-requires-python = ">=3.14"
-dependencies = []
+requires-python = ">=3.13"
+dependencies = [
+    "flax>=0.12.2",
+    "pytest>=9.0.2",
+]
