--- a/minimal-alpha-zero/pyproject.toml
+++ b/minimal-alpha-zero/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flax>=0.12.2",
+    "joblib>=1.5.3",
     "pytest>=9.0.2",
 ]
